# BDraw

./: .gitignore  CMakeLists.txt  CMakeLists_for_Windows.txt  Progetto BDraw.md  README.md  VCPKG_GUIDE.md  compilazione_exe_windows.txt  doxyconfig  vcpkg.json
LaTeX/: Progetto_BDraw.tex
LaTeX Tesi/: Progetto_BDraw OLD.tex  Progetto_BDraw.tex
include/: cartesianView.h  mainwindow.h  simulationCanvas.h
src/: cartesianView.cpp  main.cpp  mainwindow.cpp  simulationCanvas.cpp
